# TemplateCPP

./: README.md
C++ Template/: CMakeLists.txt  README.md  run.ps1
C++ Template/include/: scream.h
C++ Template/src/: main.cpp  scream.cpp
